--- a/.bowerrc
+++ b/.bowerrc
@@ -1,4 +1,1 @@
-{ 
-   "proxy": "http://<host>:<port>",
-    "https-proxy": "http://<host>:<port>"
-}
+{"directory" : "src/public/static/bower_components"}
